--- a/LI4.2/BlazorServerAuthenticationAndAuthorization.csproj
+++ b/LI4.2/BlazorServerAuthenticationAndAuthorization.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="BlazorInputFile" Version="0.2.0" />
+  </ItemGroup>
+
 </Project>
