--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-UTLMIHD\\LI4;Initial Catalog=LI4;Integrated Security=True;Encrypt=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
